--- a/src/react-frontend/src/Dashboard.css
+++ b/src/react-frontend/src/Dashboard.css
@@ -7,7 +7,14 @@
 
 .dropdown {
     display: flex;
-    width: 200px;
-    height: 80px;
-    margin-left: 30px;
+    justify-self: center;
+    align-items: center;
+    width: 800px;
+    height: 160px;
+}
+
+.dropdownBar {
+    width: 400px;
+    margin-left: 50px;
+    margin-right: 20px;
 }
